2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* keyboard.c: 
	* keyboard.h: 
	* sound.c: 
	* sound.h: 
	* game.c: 
	* graphics.c: 
	* graphics.h: 
	* menu.c: 
	* menu.h: 
	* gameconfig.c: 
	* gameconfig.h: 
	* gnobots.c: 
	* statusbar.h: 
	* statusbar.c: Fixed compiler warnings.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: Removed all the "Are you sure questions".

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: i18n fixes from Christian Neumair (bug #114875).

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-30 Callum McKenzie <callum@physics.otago.ac.nz>

	* help/.cvsignore:
	* help/C/.cvsignore:
	* help/da/.cvsignore:
	* help/es/.cvsignore:
	* help/it/.cvsignore: Added (got lost in the shuffle).

2002-12-11  Ross Burton  <ross@burtonini.com>

	* help/C/gnobots2.xml
	* menu.c: 
	* properties.c:
	* gnobots2.soundlist.in:
	* gnobots2.desktop.in: Rename game to "GNOME Robots"

2002-11-27  Ross Burton  <ross@burtonini.com>

	* menu.c: 
	* gnobots.c: 
	* graphics.c: s/Gnome/GNOME/, for #99683.

2002-11-19  Jeremy Browne  <jeremy@synonymous.ca>

	* menu.c: (new_cb) (exit_cb): changed new game / quit dialogs for
	consistancy with other parts of gnome-games package. (Bug #97321)

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnobots2.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-11  Tim Musson <trmusson@ihug.co.nz>

	* game.c: (show_scores): no more multiple Score dialogs.
	* menu.c: (about_cb): no more multiple About dialogs. These fix
	#97320 for gnobots.

2002-11-11  Ross Burton  <ross@burtonini.com>

	* gnome-gnobots2.png: New icon contributed by Timothy Musson.
